src/test/deca/syntax/invalid/test_synt/hello_world/expression.deca
// Description:
//    Programme avec une expression.
//    [Syntaxe]: main dérive vers un bloc, pas une expression.
//
// Resultats:
//    ligne 12: Erreur, syntaxe invalide
//    test_lex ne doit pas donner d'erreur.
//
// Historique:
//    cree le 05/01/2022

"chaine"